feat: add frontend

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -23,7 +23,8 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@lib/*": ["lib/*"]
     }
   },
   "ts-node": {
