--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/express-serve-static-core": "^5.0.6",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.1",
     "@types/node": "^22.13.13",
