feat: add transactions

--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,10 @@
     "drizzle-orm": "^0.41.0",
     "express": "^4.21.2",
     "helmet": "^8.1.0",
+    "mathjs": "^14.4.0",
     "nodemon": "^3.1.9",
     "postgres": "^3.4.5",
+    "qrcode": "^1.5.4",
     "typescript": "^5.8.2",
     "validator": "^13.15.0",
     "zod": "^3.24.2",
@@ -35,8 +37,10 @@
     "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.1",
+    "@types/mathjs": "^9.4.2",
     "@types/node": "^22.13.13",
     "@types/pg": "^8.11.11",
+    "@types/qrcode": "^1.5.5",
     "@types/validator": "^13.12.3",
     "drizzle-kit": "^0.30.5",
     "tsx": "^4.19.3"
